<resources>
    <string name="app_name">My Child</string>
    <string name="text1">التغذية</string>
    <string name="text2">الرضاعة الطبيعية</string>
    <string name="text3">الرضاعة الصناعية</string>
    <string name="text4">مراحل النمو</string>
    <string name="text5">ارقام</string>
    <string name="text6">ظهور السنان</string>
    <string name="text7">تحذيرات غذائية</string>
    <string name="text8">امراض شائعة  واسعافات</string>
    <string name="text9">القواعد الذهبية فى تربية البناء</string>
    <string name="المزيد">المزيد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="مراحل">مراحل النمو</string>

</resources>
