<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

android:background="@color/color"


    >
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="30dp"

         >
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/text2"
            android:textSize="20sp"
            android:id="@+id/button1"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgrauond1"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1"
            android:text="@string/text1"
            android:textSize="20sp"
            android:id="@+id/button2"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgraund2"/>
        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2"
            android:text="@string/text3"
            android:textSize="20sp"
            android:id="@+id/button3"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgraung3"/>
        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button3"
            android:text="@string/مراحل"
            android:textSize="20sp"
            android:id="@+id/button4"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgraund4"/>



        <Button
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button4"
            android:text="@string/text6"
            android:textSize="20sp"
            android:id="@+id/button6"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgraund8"/>
        <Button
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button6"
            android:text="@string/text7"
            android:textSize="20sp"
            android:id="@+id/button7"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgrauond9"/>
        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button7"
            android:text="@string/text8"
            android:textSize="20sp"
            android:id="@+id/button8"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgraund10"/>
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button8"
            android:text="@string/text9"
            android:textSize="20sp"
            android:id="@+id/button9"
            android:textColor="#ffff"
            android:background="@drawable/buttonbackgrauond1"/>


    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button9"
        android:textSize="20sp"
        android:id="@+id/button10"
        android:text="@string/المزيد"
        android:textColor="#ffff"
        android:background="@drawable/buttonbackgrauond1"
        android:layout_marginTop="4dp"

        />
     </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>



